assets/css/style.css
/* ... */
@font-face {
  font-family: 'pacfontregular';
  src: url('./fonts/pac-font-webfont.woff2') format('woff2'),
       url('./fonts/pac-font-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'arcaderegular';
  src: url('./fonts/arcade-webfont.woff2') format('woff2'),
       url('./fonts/arcade-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}


/* -------------------------------------------------- GLOBAL */


* {
  border: none;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  position: relative;
  height: 100vh;
  padding-bottom: 60px;

  background: var(--background-solid) 
    url('../img/background/space.webp') 
    no-repeat 
    center / cover;
  
  font-family: var(--font-general);
  color: var(--font-color-general);
}

ul {
  list-style-type: none;
}


/* SCROLLBARS */

.scrollbar::-webkit-scrollbar {
  width: .3rem;
}

.scrollbar::-webkit-scrollbar-thumb {
  background-color: var(--font-color-accent);
}


/* CONTAINERS */

.outer-container {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;

  background-color: var(--background-transparent);

  display: flex;
  align-items: center;
  justify-content: center;
}

.inner-container {
  width: 95%;
  height: max-content;
  max-width: 700px;
  max-height: 90vh;

  overflow-y: auto;

  background-color: var(--background-transparent);
  backdrop-filter: blur(3px);
  border: double 4px var(--border);
  
  font-weight: 300;
  text-align: center;
  text-transform: uppercase;
}


/* BUTTONS */

.buttons {
  margin: 5vh auto;
  width: max-content;

  display: flex;
  flex-direction: column;
}

.buttons .btn {
  padding: 10px 30px 6px;
  width: 100%;

  font-family: var(--font-general);
  font-size: 2rem;
  line-height: 0.5;
  letter-spacing: 5px;
  text-transform: uppercase;
  color: var(--font-color-accent);

  background-color: inherit;
  border: double 4px transparent;
  cursor: pointer;

  transition: .3s;
}

.buttons .btn:hover {
  background-color: var(--background-solid);
  border: double 4px var(--border);
}

.buttons .btn:active {
  background-color: var(--border);
  border: double 4px var(--background-solid);
}

.confirm-player-btns .btn:not(.confirm-player-btns .btn:first-of-type),
#win-lose .btn:not(#win-lose .btn:first-of-type),
#leaderboard .btn:not(#leaderboard .btn:first-of-type) {
  margin-top: 1vh;
}


/* LOGO */

.logo {
  padding-top: 2vh;
  font-size: 3rem;
}


/* TEXT */

.heading-bundle {
  margin: 0 auto;
  width: max-content;
  max-width: 90%;
}

h1 {
  padding-top: 5vh;

  font-family: var(--font-game-name);
  font-size: 3rem;
  text-transform: uppercase;
  text-align: center;
  color: var(--font-color-highlight-secondary);
  text-shadow: 2px 2px 10px var(--font-color-highlight-secondary);
  
}

h2 {
  padding-top: 3vh;
  
  font-family: var(--font-title);
  font-size: 2.5rem;
  line-height: 1.2;
  letter-spacing: 5px;
  text-transform: uppercase;
  color: var(--font-color-accent);
  text-shadow: 2px 2px 10px var(--font-accent);
}

h3 {
  padding-top: 1vh;
  
  font-size: 2rem;
  font-weight: normal;
  line-height: 1;
  letter-spacing: 5px;
  text-align: end;
  text-transform: uppercase;
}

h4 {
  padding: 5vh 0 1vh;
  
  font-size: 3rem;
  font-weight: normal;
  color: var(--border-highlight);
  letter-spacing: 5px;
  line-height: 1.5;
  text-transform: uppercase;
  text-decoration: underline 2px double rgb(255, 0, 0);
}

/* BREAK LINES */

.br-tablet,
.br-mobile,
.br-xs {
  display: none;
}


/* DISPLAY */

.hide {
  display: none;
}


/* --------------------------------------------- GAME SCREEN */


.game-container {
  margin: auto;
  padding: 0 10px;
  max-width: 700px;

  font-size: 2rem;
}

.game-container .highscore-container {
  padding-top: 10vh;
  letter-spacing: 1px;
  text-transform: uppercase;
  text-align: center;
}

.game-container .game {
  margin: auto;
  padding-top: 2vh;
  width: max-content;
  max-width: 100%;
}

.game-container .game .game-helpers {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.game-container .game .game-helpers .current-game-score {
  letter-spacing: 1px;
  text-transform: uppercase;
}

.game-container .game .game-helpers .interactive-helpers {
  margin-bottom: 5px;
}

.game-container .game .game-helpers .interactive-helpers i {
  margin-left: 5px;

  cursor: pointer;
  transition: .3s;
}

.game-container .game .game-helpers .interactive-helpers i:hover {
  color: var(--font-color-accent-secondary);
}

/* ------------------------------------- ENTER PLAYER SCREEN */


form .input-container {
  margin-top: 5vh;
}

form .player-input {
  padding: 5px 10px;
  width: 50%;

  font-family: var(--font-general);
  font-size: 3rem;
  line-height: 1;
  color: var(--font-color-highlight);
  text-align: center;
  
  background-color: transparent;
  border: 2px solid var(--border-secondary);
}

form .player-input::placeholder{
  color: var(--border-secondary);
  opacity: 30%;
}

form .player-input:focus-visible {
  outline: none;
  border: 2px solid var(--border-highlight);
}

form .validation {
  margin-top: 2vh;
  height: 2rem;
  
  font-size: 1.3rem;
  font-weight: bold;
  
  opacity: 70%;
}

form .validation .highlight {
  color: var(--font-color-highlight-secondary);
}

form .validation .error {
  min-height: max-content;
  color: var(--font-color-highlight);
}


/* ----------------------------------- CONFIRM PLAYER SCREEN */


.display-player {
  margin-top: 5vh;
  
  color: var(--font-color-highlight-secondary);
  font-size: 3rem;
  letter-spacing: 5px;
  text-align: center;
  text-transform: uppercase;
}

/* ----------------------------------------- WIN/LOSE SCREEN */


#win-lose .win {
  color: var(--font-color-highlight-secondary);
}

#win-lose .lose {
  color: var(--font-color-highlight);
}
/* ... */

